--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -3,7 +3,7 @@ server: # REST and WS server
   address: 0.0.0.0
 lavalink:
   server:
-    password: "5GXqCN9XsbbDHD"
+    password: "replace-me"
     sources:
       youtube: true
       bandcamp: true
