--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -3,7 +3,7 @@ server: # REST and WS server
   address: 0.0.0.0
 lavalink:
   server:
-    password: "replace-me"
+    password: "This should be the same as your password in .env"
     sources:
       youtube: true
       bandcamp: true
