--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 # Required installs.. The bot will not work properly without these
 discord.py==2.3.2
-#wavelink==3.2.0 # Temporarily disabled until the library is updated to >=3.2.0
-git+https://github.com/PythonistaGuild/Wavelink.git@66a1c9dd759ef7bcd54ed55185ade91c0d51b455
+wavelink==3.4.0 # Temporarily disabled until the library is updated to >=3.2.0
 spotipy==2.22.1
 python-dotenv==1.0.0
 PyNaCl==1.5.0
