--- a/lavalink/application.example.yml
+++ b/lavalink/application.example.yml
@@ -1,4 +1,3 @@
-# Rename this file to 'application.yml' to use it
 server: # REST and WS server
   port: 2333
   address: 0.0.0.0
@@ -12,39 +11,36 @@ plugins:
     allowDirectPlaylistIds: true
     clients:
       - MUSIC
+      - TVHTML5EMBEDDED
+      - ANDROID_MUSIC
       - ANDROID_TESTSUITE
       - WEB
-    WEB:
-      playback: false
-    TVHTML5EMBEDDED:
-      playlistLoading: false
-      videoLoading: false
-      searching: false
+      - WEBEMBEDDED
+      - ANDROID
+      - ANDROID_LITE
+      - MEDIA_CONNECT
+      - IOS
   lavasrc:
     sources:
       spotify: true # Enable Spotify source
-      applemusic: false # Enable Apple Music source
-      deezer: false # Enable Deezer source
-      yandexmusic: false # Enable Yandex Music source
-      flowerytts: false # Enable Flowery TTs source
-      youtube: false # Enable YouTube search source (https://github.com/topi314/LavaSearch)
     spotify:
-      clientId: "Spotify client id here"
-      clientSecret: "Spotify Client Secret here"
+      clientId: "*********************"
+      clientSecret: "*********************"
       countryCode: "US" # the country code you want to use for filtering the artists top tracks. See https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
       playlistLoadLimit: 6 # The number of pages at 100 tracks each
       albumLoadLimit: 6 # The number of pages at 50 tracks each
-
 lavalink:
   plugins:
       # - dependency: "com.github.example:example-plugin:1.0.0" # required, the coordinates of your plugin
       #     repository: "https://maven.example.com/releases" # optional, defaults to the Lavalink releases repository by default
       #     snapshot: false # optional, defaults to false, used to tell Lavalink to use the snapshot repository instead of the release repository
-    - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.1.1"
+    #- dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.2.0"
+    #  repository: "https://maven.lavalink.dev/releases"
+    - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:94c29d3"
+      repository: "https://maven.lavalink.dev/snapshots"
+    - dependency: "com.github.topi314.sponsorblock:sponsorblock-plugin:3.0.1"
       repository: "https://maven.lavalink.dev/releases"
-    - dependency: "com.github.topi314.sponsorblock:sponsorblock-plugin:3.0.0"
-      repository: "https://maven.lavalink.dev/releases"
-    - dependency: "dev.lavalink.youtube:youtube-plugin:1.4.0"
+    - dependency: "dev.lavalink.youtube:youtube-plugin:1.8.3"
       snapshot: false # Set to true if you want to use a snapshot version.
   pluginsDir: "./plugins"
   server:
@@ -79,40 +75,22 @@ lavalink:
     youtubeSearchEnabled: true
     soundcloudSearchEnabled: true
     gc-warnings: true
-    #ratelimit:
-    #ipBlocks: ["1.0.0.0/8", "..."] # list of ip blocks
-    #excludedIps: ["...", "..."] # ips which should be explicit excluded from usage by lavalink
-    #strategy: "RotateOnBan" # RotateOnBan | LoadBalance | NanoSwitch | RotatingNanoSwitch
-    #searchTriggersFail: true # Whether a search 429 should trigger marking the ip as failing
-    #retryLimit: -1 # -1 = use default lavaplayer value | 0 = infinity | >0 = retry will happen this numbers times
-    #youtubeConfig: # Required for avoiding all age restrictions by YouTube, some restricted videos still can be played without.
-    #email: "" # Email of Google account
-    #password: "" # Password of Google account
-    #httpConfig: # Useful for blocking bad-actors from ip-grabbing your music node and attacking it, this way only the http proxy will be attacked
-    #proxyHost: "localhost" # Hostname of the proxy, (ip or domain)
-    #proxyPort: 3128 # Proxy port, 3128 is the default for squidProxy
-    #proxyUser: "" # Optional user for basic authentication fields, leave blank if you don't use basic auth
-    #proxyPassword: "" # Password for basic authentication
-
-metrics:
-  prometheus:
-    enabled: false
-    endpoint: /metrics
-
-sentry:
-  dsn: ""
-  environment: ""
-#  tags:
-#    some_key: some_value
-#    another_key: another_value
 
 logging:
   file:
     path: ./logs/
 
   level:
+    # Set this to DEBUG to enable more detailed logging. Please note that this will log probably spam your console.
     root: INFO
-    lavalink: INFO
+    # Set this to DEBUG to enable more detailed logging from Lavalink
+    lavalink: DEBUG
+    # Set this to TRACE to see all WebSocket messages
+    lavalink.server.io.SocketContext: TRACE
+    # Log all track exceptions (COMMON, SUSPICIOUS & FAULT)
+    com.sedmelluq.discord.lavaplayer.tools.ExceptionTools: DEBUG
+    # Log YouTube Plugin stuff (only needed if you have issues with YouTube)
+    dev.lavalink.youtube: DEBUG
 
   request:
     enabled: true
@@ -120,7 +98,6 @@ logging:
     includeHeaders: false
     includeQueryString: true
     includePayload: true
-    maxPayloadLength: 10000
 
   logback:
     rollingpolicy:
